--- a/docs/example-mappings.json
+++ b/docs/example-mappings.json
@@ -1,27 +1,16 @@
 [
   {
-    "number": "91201",
-    "matrix_id": "@giacomo:synapse.gs.nethserver.net",
-    "room_id": "!giacomo-room:synapse.gs.nethserver.net",
-    "user_name": "Giacomo Rossi"
-  },
-  {
     "number": "201",
     "matrix_id": "@giacomo:synapse.gs.nethserver.net",
     "room_id": "!giacomo-room:synapse.gs.nethserver.net",
-    "user_name": "Giacomo Rossi"
-  },
-  {
-    "number": "91202",
-    "matrix_id": "@mario:synapse.gs.nethserver.net",
-    "room_id": "!mario-room:synapse.gs.nethserver.net",
-    "user_name": "Mario Bianchi"
+    "user_name": "Giacomo Rossi",
+    "sub_numbers": ["3344", "91201"]
   },
   {
     "number": "202",
     "matrix_id": "@mario:synapse.gs.nethserver.net",
     "room_id": "!mario-room:synapse.gs.nethserver.net",
-    "user_name": "Mario Bianchi"
+    "user_name": "Mario Bianchi",
+    "sub_numbers": ["3345", "91202"]
   }
 ]
-
