--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -3,8 +3,11 @@ name: Build and Publish Container
 on:
   push:
     branches: [ main ]
+    tags:
+      - '*'
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-and-push:
